--- a/templates/search_form.html
+++ b/templates/search_form.html
@@ -4,7 +4,10 @@
 </head>
 
 <body>
-  <form action="/search/" method="get">
+  {% if error %}
+    <p style="color: red;">Please submit a search term.</p>
+  {% endif %}
+  <form action="" method="get">
     <input type="text" name="q">
     <input type="submit" value="Search">
   </form>
