--- a/templates/contact_form.html
+++ b/templates/contact_form.html
@@ -6,18 +6,17 @@
 <body>
   <h1>Contact</h1>
   
-  {% if errors %}
-    <ul>
-      {% for error in erorrs %}
-      <li>{{ error }}</li>
-      {% endfor %}
-    </ul>
+  {% if form.errors %}
+    <p style="color:red;">
+      Please correct the error{{ form.errors|pluralize }} below.
+    </p>
   {% endif %}
 
-  <form action="/contact/" method="post">
-    <p>Subject: <input type="text" name="subject"></p>
-    <p>Your e-mail (optional): <input type="text" name-"email"></p>
-    <p>Message: <textarea name="message" rows="10" cols="50"></textarea></p>
+  <form action="" method="post">
+    <table>
+      {{ form.as_table }}
+    </table>
+    {% csrf_token %}
     <input type="submit" value="Submit">
   </form>
 </body>
